--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,22 @@ body {
   background-color: #fff;
 }
 
+
+.footer{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+
+}
+.copyright {
+
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+
+}
+
+
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
 }
