--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,13 +11,11 @@
 }
 
 .botonadmin{
-    border: 1px solid white;
-    margin-left: auto;
+    flex: 0 0 33.3333333333%;
     
 }
 
 .principal{
-    border: 3px solid red;
     margin: 40px;
     width: 90%;
     padding: 10px;
