--- a/css/estilo.css
+++ b/css/estilo.css
@@ -59,8 +59,8 @@ td, th {
 
 .experiences{
     border-style: solid;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .cards {
