--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,4 @@
 * {
-    margin: 0;
-    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -17,8 +15,6 @@
 
 .principal{
     margin: 40px;
-    width: 90%;
-    padding: 10px;
     height: 100%;
 }
 
@@ -57,34 +53,42 @@ td, th {
 
 } */
 
+/*.expe{
+  column-count: 3;
+  column-gap: 40px;
+}*/
+
 .experiences{
     border-style: solid;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* grid-template-columns: auto auto auto auto; */
+    /* grid-column-gap: 50px; */
+}
+
+.experiences>* {
+  flex: 0 0 22.2222%;
 }
 
 .cards {
-    margin: 20px;
-    width: 600px;
+    margin: 20px;    
     list-style-type: none;
   }
   
   .cards li {
-    float: left;
-    width: 46%;
+    float: left;    
     display: block;
     margin-right: 2%;
     margin-bottom: 10px;
   }
   
   img {
-    height: auto;
-    max-width: 100%;
+    height: auto;    
   }
   
-  
   .product-card {
-      max-width: 280px;
+    max-width: 280px;
     font-size: 12px;
   }
   
